--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -1,14 +1,22 @@
-## Sorting out graph layout
+## Sorting out graph processing
 
-We've seen a few papers recently looking at the problem of processing *very* large graphs; graphs that are so large, the cost of sorting their edges to fit the adjacency-list representation is prohibitive.
+I recently took some time to improve the throughput of [differential dataflow](http://github.com/frankmcsherry/differential-dataflow). One important step in differential dataflow is grouping a collection of `(key, val, wgt)` triples by `(key, val)`, so that the `wgt` values can be accumulated. I did that by sorting the triples, which often leads to a fairly natural reaction of "wow, that's probably a bit heavyweight; wouldn't a `HashMap` work better?" I even thought this for a while.
 
-Specifically, I'm thinking of [X-Stream](http://infoscience.epfl.ch/record/188535), whose abstract indicates that its novelty lies at least partly in
+Constant time random access does sound better than doing super-linear work sorting. In fact, this has been the subject of a bunch of recent work in the database community, with [this paper on sort joins versus hash joins](http://www.vldb.org/pvldb/vol7/p85-balkesen.pdf) being a great place to start. One thing you notice when you start to read is that by "hash join" they don't mean `HashMap`, they mean [radix sort](https://en.wikipedia.org/wiki/Radix_sort). The second thing you notice is that the performance the database community achieves completely blows the performance the systems community seems to expect out of the water.
+
+I'm going to explain the first thing, and why "doing random access" isn't even on the table for performance-conscious people. The second thing will have to remain a mystery for now, much like sixth normal form and "The Chase".
+
+### Um, graph processing?
+
+Ok, so there was this paper back at SOSP 2013 called [X-Stream](http://infoscience.epfl.ch/record/188535), whose abstract indicates that its novelty lies at least partly in
 
 > ... streaming completely unordered edge lists rather than performing random access.
 
-This statement always weirded me out a bit, because I think of unordered edge lists as inducing a lot of random access: if you don't have any locality in the edge endpoints, you stab around in memory pretty much arbitrarily.
+The idea was that some graph datasets are so large, even sorting the data is prohibitively expensive. You'd rather just take the edges as they come, eat a random access into your per-node state, but avoid the scary task of sorting lots of data.
 
-When X-Stream was presented at SOSP 2013, I asked author Amitabha Roy how come the time to process the unordered edges on their system was larger than the time to process ordered edges on my laptop (with all of its "random accesses").
+The statement above always weirded me out a bit, because I think of unordered edge lists as inducing a lot of random access: if you don't have any locality in the edge endpoints, you stab around in memory pretty much arbitrarily. I think what is meant is that some sorting algorithms (e.g. counting sort) end up doing random access into an amount of memory proportional to the number of edges you have. Naughty counting sort.
+
+When X-Stream was presented at SOSP 2013, I asked the authors how come the time to process the unordered edges on their system was larger than the time to process ordered edges on my laptop (with all of its "random accesses").
 
 Specifically, [I asked](https://www.google.com/moderator/#15/e=215b85&t=215b85.47)
 
@@ -16,21 +24,17 @@ Specifically, [I asked](https://www.google.com/moderator/#15/e=215b85&t=215b85.4
 
 Clearly, even at this point I was already well on my way down the path of making friends and influencing people.
 
-His answer, and the motivation for today's post, was:
+The answer, and the motivation for today's post, was that yes, it is about sorting being more expensive than you think.
 
 > X-Stream trades pre-processing overheads for inefficiency at runtime. We estimate it would take about 600 seconds to sort the Twitter edge list [1.48B edges] into the format you need for your implementation. Your single core implementation therefore takes around 664 seconds as compared to our 75 seconds. This is a very good question though and underlines the need for proper baselines and a comparative study of graph processing systems.
 
-This got read aloud, so the whole audience got to hear just how silly I was. Clearly sorting is *expensive*. Geez. *Six hundred seconds* to sort those edges. How awkward for me, right?
+This got read aloud, so the whole audience got to hear just how silly I was. It is conventional wisdom that sorting is *very, very expensive*. At least, expensive relative to just dereferencing a memory location.
 
----
-
-If you've read any of my earlier post on single-threaded graph processing, you might also be saying "64 seconds for PageRank?!? But, you know you can do that in about 5 seconds...".
-
-As it turns out, I wasn't the only one off by an order of magnitude.
+Let's challenge this conventional wisdom, and see how sorting stacks up against random access. Hom much slower is sorting *really*, and when should you switch from unordered access to first sorting the data.
 
 ### Sorting things out
 
-Let's take a tour through sorting algorithms, starting from the very easy, up to the slightly more intelligent, and on to what you find to be the state of the art when you actually look around at the work others are doing.
+We'll now take a brief tour through sorting algorithms, starting from the very easy, up to the slightly more intelligent, and on to what you find to be the state of the art when you go talk to the database crowd who apparently do this for a living.
 
 #### Calling `sort`
 
@@ -38,11 +42,12 @@ I'm using [Rust](http://rust-lang.org), and Rust has a `sort` method on mutable 
 
 Because it does all these allocations, I'm not really able to try it out with the 1.48B edges, because that would be 36GB or so. Instead, I'll sort some smaller things, and we will already be disappointed, which is the goal of this section anyhow.
 
-We are going to sort `1 << 29` elements, because that is what fits in my  laptop's memory, and coincidentally that is the largest number of elements the X-Stream paper sorted when evaluating the cost of sorting (their Figure 18).
+We are going to sort `1 << 29` elements, which is a weird way to write things. When you see `1 << 29` you should think either "half a billion" , or "one third of that graph Frank asked about", or just "some big-ish number of edges".
 
-We will be able to compare out results with their results! SCIENCE!
 
-I'm going to sort random `(u32, u32)` data, then flip the data around and do it again, ten times:
+We are using `1 << 29` because that is what fits in my  laptop's memory, and coincidentally that is the largest number of elements the X-Stream paper sorted when evaluating the cost of sorting (their Figure 18). We will be able to compare out results with their results! SCIENCE!
+
+I'm going to sort random `(u32, u32)` data, then flip the data around and do it again, ten times in total:
 
 ```rust
 extern crate rand;
@@ -76,33 +81,55 @@ cargo run 1034.41s user 204.27s system 90% cpu 22:56.07 total
 
 That is about 1376 seconds, 9 seconds of which are data generation, to do ten iterations, so 128.6 seconds per iteration.
 
-By comparison, in X-Stream's Figure 18, at `1 << 29` edges `gcc`'s sort doesn't finish in 500 seconds (it looks like it is heading for 1000 seconds), and counting sort clocks in at a little over 250 seconds.
+By comparison, in X-Stream's Figure 18, at `1 << 29` edges `gcc`'s sort doesn't finish in 500 seconds (and it looks like it is heading for 1000 seconds), and counting sort clocks in at a little over 250 seconds.
 
-It is totally possible I don't understand what they mean by "RMAT scale factor 25". I do think I have the right number of nodes and edges, though I did not follow the "do some random shit ... power laws!" RMAT methodology. Also my laptop totally wasn't available back in 2013 when they did these measurements, but there seems to be a bit of a discrepancy here. Maybe my laptop is 8x faster than whatever they were running on, but...
+It isn't clear what has changed since 2013 (and perhaps I misunderstood the scale of graph they are working with), but if you multiply this by three (to get to 1.5B edges, per the graph in question), you get almost 400 seconds, plus some slop to account for a few years passing... Maybe 600 seconds is the right ballpark?
 
-On the other hand, this graph has about one-third of the edges of the graph I asked about in the question, and if you multiply this by three you get almost 400 seconds, plus some slop to account for a few years passing... Maybe 600 seconds is the right ballpark?
-
-Rust's `sort` is quite primitive. Isn't there anything better?
+Although, Rust's `sort` is quite primitive. Isn't there anything better?
 
 #### Counting sort
 
-I was going to tell you about counting sort, because that is what X-Stream has as their faster sort comparison, but it is dumb. I'm going to save you some time and show you what they should have used.
+[Counting sort](https://en.wikipedia.org/wiki/Counting_sort) is the other sorting algorithm X-Stream compares against. It is meant to be better than mergesort and quicksort because it is specialized to integer keys and does just two passes over the data.
 
-The main reason counting sort is dumb is that it has horrible memory locality. Each time you see an edge `(src, dst)` you go and do a random access based on `src`. Actually, you do that three times, first into an array as large as there are nodes, then again into that array in a second scan, and then into an array as large as there are edges.
+Unfortunately, it isn't a very good sorting algorithm for large amounts of data, for exactly the reason that we are trying to sort the data in the first place: counting sort does lots of random accesses, and those random accesses get very expensive as the space of keys gets large.
 
-These random accesses are exactly what you are trying to avoid by sorting the edges; taking them on the chin three times isn't helpful.
+Counting sort first determines the a node's degree by scanning the elements, then it accumulates these degrees to determine offsets in a larger array, where the sorted data will land. It then scans the elements again and writes them to final array at the appropriate offset:
 
-If you try hard, you can do `1 << 29` edges in under 200ns / edge, which would be about 100 seconds all told. That is a bit better than `sort` above, and while you can improve it with pre-fetching, we aren't going to go in that direction.
+```rust
+// determine node degrees
+let mut counts = vec![0; nodes];
+for &(src,dst) in &edges {
+    counts[src] += 1;
+}
+
+// accumulate degrees
+let mut offset = 0;
+for i in 1..nodes {
+    mem::swap(&mut offset, &mut counts[i]);
+    offset += counts[i];
+}
+
+// write edge destinations at offsets
+let mut dests = vec![0; edges.len()];
+for &(src,dst) in &edges {
+    dests[counts[src]] = dst;
+    counts[src] += 1;
+}
+```
+
+If you do the math, X-Stream's 250 seconds to counting sort `1 << 29` edges means 500ns per edge. This seems a bit high to me based on what it needs to do, but looking at the code you can understand why it isn't going to get too much faster with all the random accesses. You can improve it with pre-fetching, we aren't going to go in that direction.
 
 Instead, we are going to go in the direction of *awesome*.
 
 ### Radix sort
 
-Radix sort is a very cool not-comparison-based sorting algorithm. It sorts records by treating each record as a sequence of bytes, and making sure the records end up sorted by their byte sequence. This is just great for sorting things like graph edges, which we think of as just `([u8; 4], u32)`.
+[Radix sort](https://en.wikipedia.org/wiki/Radix_sort) is a very cool not-comparison-based sorting algorithm. Incidentally, it is also one of the first links on [the counting sort wikipedia page](https://en.wikipedia.org/wiki/Counting_sort), filed under "what counting sort is actually useful for".
 
 Radix sorting works by repeatedly partitioning a sequence of elements into some number of disjoint subsequences. That number is usually 256, and the partitioning is usually based on looking at a byte in each element. After partitioning, you put the subsequences back together in order, and repeat with the next byte.
 
-The resulting sequence is ordered by the byte you last looked at, and records with the same byte are ordered by the second to last byte you examined, etc. Once you've looked at all bytes, the sequence is ordered by the binary representation of each element, assuming you looked at the bytes from least significant to most significant.
+If you look at it right, radix sort is a bit like counting sort, but used byte-at-a-time. Rather than disassemble the sequence and put it back together, we could just write out to another array at positions determined by accumulating the number of records with each byte. So, it's a bit like counting sort, but with totally different perfomance.
+
+Each pass of radix sort only sorts based on one byte, but it is a stable sort, so any ties remain in the same order they were in before. If you do multiple passes looking at different bytes, the resulting sequence is ordered first by the byte you last looked at, then by the second most recent byte you examined, etc. Once you've looked at all bytes, the sequence is ordered by the binary representation of each element, assuming you looked at the bytes from least significant to most significant.
 
 Here is a quick sketch of what each pass of radix sort might look like, if we wanted to partition based on some `get_byte` method I just made up.
 
@@ -118,13 +145,13 @@ You do four of these sequential scans, and in each you write sequentially to one
 
 The great thing about radix sort is that in one scan through the data does the equivalent of 8 comparisons which would normally take a bunch of conditional logic. Instead, it just pulled out a byte and used it to look up an address.
 
-The downside to radix sort is that is just looks at bytes. If you had some deep and semantically meaningful ordering defined over your type, that's great but we're sorting by its bytes.
+The downside to radix sort is that is just looks at bytes. If you had some deep and semantically meaningful ordering defined over your type, (or, like, a pointer) that's great but we're sorting by its bytes. In the context of graph edges, this works just fine.
 
 #### Improvements
 
-Ok, maybe the above algorithm is a little too simple. The code above has the sketchy property that each of the `output[byte]` lists need to re-allocate as they grow, and that is a waste of everyone's time.
+Maybe the above algorithm is a little too simple. The code above has the sketchy property that each of the `output[byte]` lists need to re-allocate as they grow, and that is a waste of everyone's time.
 
-A different approach fills buffers of some small size (e.g. 1024 elements), and enqueues them instead. These buffers can be recycled each round, like so:
+There are several variations here, but one I like fills buffers of some small size (e.g. 1024 elements), and enqueues them instead. These buffers can be recycled each round, like so:
 
 ```rust
 for list in input {
@@ -141,7 +168,7 @@ for list in input {
 }
 ```
 
-Ah, that looks better. We just need to put a loop around it, add an `unsafe { }`, erase a few bounds checks, and we are good to go!
+Ah, that looks better. This takes input data in short lists (which is how [timely dataflow](http://github.com/frankmcsherry/timely-dataflow) provides them to operators), and re-uses the lists when it needs to write out byte-partitioned data. We just need to put a loop around it, add an `unsafe { }`, erase a few bounds checks, and we are good to go!
 
 ```
 Echidnatron% cargo run --release
@@ -159,19 +186,23 @@ sorted in 7.516964436043054
 sorted in 7.4602396480040625
 ```
 
-Oh my. Is that 7.5 seconds to sort `1 << 29` edges?
+Oh wow. Is that 7.5 seconds to sort `1 << 29` edges?
 
-Well, that sure is faster than 250 seconds, or whatever was floated in the X-Stream paper as the fast way to sort edge data. I wonder if their conclusions still hold up given that sorting is now about 30x faster than they thought it was.
+Well, that sure is faster than the 250 seconds counting sort took in the X-Stream paper. [Thanks Wikipedia!](https://wikimediafoundation.org/wiki/Ways_to_Give)
 
-### About those conclusions ...
+Also, this time is for [my 100 line radix sort implementation](https://github.com/frankmcsherry/radix-sort/blob/master/src/lib.rs#L161-L224); there are better implementations out there, people writing [new papers](http://www.vldb.org/pvldb/vol8/p1518-cho.pdf) each year, and one should only expect things to get better. I'm planning on stealing as much as I can.
 
-Hey let's test the main thesis of the X-Stream paper with a simple experiment.
+### Science incoming!
 
-Their claim is that for many graph processing tasks it is faster to use unordered edge data than it is to sort the edge data and then do the task. We are going to try and reproduce this for a simple task: computing the out-degrees.
+Let's re-test a simple instance of the main thesis of the X-Stream paper with an experiment.
 
-Computing out-degrees is about as simple as it gets in graph processing land: we have a bunch of edges, and we want to know: for each source, how many edges are there from it to other nodes?
+**Note**: X-Stream is a weird and complicated system, and this simple experiment isn't going to tell us about X-Stream, so much as whether and when you should sort edges before you process them.
 
-We first make some random graph data:
+The simplest graph computation I can think of is computing node degrees. "For each source, how many edges does it have to other nodes?" We could either scan unordered edges and accumulate counts in an array, or we could sort the edge data and then accumulate counts in an array.
+
+Let's do both and record how long they take for various numbers of graph nodes and edges. Get your lab notebooks out.
+
+We first make some random graph data. We'll follow the X-Stream paper and use 16 times as many edges as nodes. We'll start with `1 << 25` nodes because that means `1 << 29` edges which we've discussed already.
 
 ```rust
 let mut nodes = vec![0; (1 << 25)];
@@ -182,14 +213,14 @@ for _ in 0..(16 * nodes.len()) {
 }
 ```
 
-We want to compute the degrees two ways: unordered, and after sorting. We'll do it ten times each, to warm up memory and stuff.
+We want to compute the degrees two ways: unordered, and after sorting. We'll do ten iterations of each, to warm up memory and stuff.
 
 First, using random access:
 ```rust
 let start = time::precise_time_s();
 for i in 0..10 {
-    for edge in edges.iter() {
-        nodes[edge.0 as usize] += 1;
+    for &(src,dst) in &edges {
+        nodes[src as usize] += 1;
     }
 }
 println!("random {}", (time::precise_time_s() - start) / 10.0);
@@ -207,52 +238,53 @@ for _ in 0..10 {
         sorter.push(edge, &|x| x.0);
     }
     let output = sorter.finish(&|x| x.0);
-    for edge in output.iter().flat_map(|x| x.iter()) {
-        nodes[edge.0 as usize] += 1;
+    for &(src,dst) in output.iter().flat_map(|x| x.iter()) {
+        nodes[src as usize] += 1;
     }
-
     sorter.recycle(output);
 }
 println!("sorted {}", (time::precise_time_s() - start) / 10.0);
 ```
 
-Any bets?
+Ok, now in true science-y fashion, we start the experiment, step back, and close our eyes.
 
 ```
 Echidnatron% cargo run --release
      Running `target/release/xstream`
-random access 10.483409735094756
+random 10.483409735094756
 sorted 8.601547808106989
 ```
 
-In less time than it takes to do the computation using unsorted data, we have not only finished the computation, but we actually sorted the damned edges for you.
-
-You're welcome.
-
-If you wanted to do an iterative graph computation like PageRank, it would literally be faster to sort the edges from scratch each and every iteration, than to do it using unsorted edges. If you want to do graph computation, please sort your edges.
-
-Actually, you know what: if you want to do big data computation, please sort your records. Stop talking sass about how Hadoop sorts things it doesn't need to, read some papers, run some tests, and then sort your damned data. Or at least run faster than me when I sort your data for you.
-
-(Aside: Who's the big data system that radix sorts *all* its records? ([Differential dataflow](http://github.com/frankmcsherry/differential-dataflow)!) You're damn right.)
+Science says you should sort your edges.
 
 ### Wait, seriously?
 
-Sorting is faster than blind random updates, because radix sorting specifically has great locality of reference, and just does four passes over the data. Each of those passes is much more than four times faster than a some random read out of cold, dark main memory.
+Sorting is faster than blind random updates, because radix sorting specifically has great locality of reference, and just does four passes over the data. Each of those passes is more than four times faster than a some random read out of cold, dark main memory.
 
-This isn't a fluke, and awkwardly, it only gets *worse* the larger the data gets. For massive graphs this is an increasingly bad idea. Radix sorting, with its excellent locality, has a running time that grows linearly with the number of edges.
+This isn't a fluke, and awkwardly, it only gets *worse* the larger the data gets. For massive graphs, processing unordered edges is an increasingly bad idea as memory gets colder, darker and farther away. Radix sorting, with its excellent locality, has a relatively flat running time that depends on the *throughput* of your storage rather than its latency.
 
-Here is a picture where I computed the average number of nanoseconds per edge to do degree counting using unsorted data, and sorting the data using radix sort and then doing degree counting. The number of nodes goes from 2^16 to 2^25, and the number of edges is 16x the number of nodes.
+Here is a picture where I computed the average number of nanoseconds per edge to do degree counting using unsorted data, and sorting the data using radix sort and then doing degree counting. The number of nodes goes from 2^16 to 2^25, and the number of edges is 16x the number of nodes. It tops out at 2^25 nodes and 2^29 edges, but you can see where this is going.
 
 ![Counting degrees, badly vs radix](https://github.com/frankmcsherry/blog/blob/master/assets/degrees.png)
 
 I did this by putting a loop around the bits of code I wrote up above.
 
-Then I sorted a random graph with 65M nodes and 1.5B edges, like the `twitter_rv` graph, in 50 seconds on one core, improving on prior estimates of 600 seconds (and, when you add 15 seconds for an ordered PageRank step, slightly edging X-Stream's 75s on 16 cores).
+Next up is to try out the graph invoked at the beginning of the post, `twitter_rv` which has 65M nodes and 1.5B edges. Annoyingly for this line of work, the data come pre-sorted, so we'll have to fake some random data with the same number of nodes and edges.
 
-According to their web page, "X-Stream is a large and complex system, currently in the region of 15K lines of code and growing fast". I couldn't figure out how to make a pull request, but I have about 100 lines of radix sort in Rust that might help.
+I did that, and found I could sort it in 50 seconds on one core (admittedly using a machine with more than 16GB of memory), improving on prior estimates of 600 seconds. When you add 15 seconds, [the time we got for single-threaded pagerank on adjacency-list data](https://github.com/frankmcsherry/blog/blob/master/posts/2015-01-15.md), you get 65 seconds, which (and this is totally a coincidence, seriously) ends up basically the same as the 64 seconds we started with.
+
+*Note*: The above raises an important point: the performance of radix sort depends on the throughput of the storage where you edges live, and the throughput of memory is quite high. If your data were on disk, the throupugh would be lower. However, it is the *throughput* of your storage that matters for sorting, not the latency (the X-Stream paper focuses on the latter, which I think is a bug). If your edge data is on disk you should compare the sequential throughput of your disk to the random throughput of your memory when trying to determine whether sorting is right for you.
 
 ### Conclusions
 
-Here is where you might expect that I would make some snarky, unkind comments about how not everyone is right. Whatever; I was just as wrong (relatively) about how long pagerank should take as the X-Stream folks seem to have been about sorting. Who knows, maybe I am the one who is wrong about sorting too.
+Here is where you might expect that I would make some snarky, unkind comments about how not everyone is always right. Whatever; I was just as wrong (relatively) about how long PageRank should take as the X-Stream folks were in an on-the-spot performance guesstimate. Who knows, maybe I am the one who is wrong about sorting too.
 
 Here is a bigger problem: in the big data processing session of one of the top computer systems conferences, no one (speaker, audience, me) seemed to know how long it should take to sort some numbers. I mean, we laugh at those database people who can't unstick their capslock key, but at least they have this figured out.
+
+If you wanted to do an iterative graph computation like PageRank, it would literally be faster to sort the edges from scratch each and every iteration, than to use unsorted edges.
+
+If you want to do graph computation, please sort your edges.
+
+Actually, you know what: if you want to do *any* big data computation, please sort your records. Stop talking sass about how Hadoop sorts things it doesn't need to, read some papers, run some tests, and then sort your damned data. Or at least run faster than me when I sort your data for you.
+
+(Aside: Who's the big data system that radix sorts *all* its records? ([Differential dataflow](http://github.com/frankmcsherry/differential-dataflow)!) You're damn right.)
