--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -30,7 +30,7 @@ The answer, and the motivation for today's post, was that yes, it is about sorti
 
 This got read aloud, so the whole audience got to hear just how silly I was. It is conventional wisdom that sorting is *very, very expensive*. At least, expensive relative to just dereferencing a memory location.
 
-Let's challenge this conventional wisdom, and see how sorting stacks up against random access. Hom much slower is sorting *really*, and when should you switch from unordered access to first sorting the data.
+Let's challenge this conventional wisdom, and see how sorting stacks up against random access. How much slower is sorting *really*, and when should you switch from unordered access to first sorting the data.
 
 ### Sorting things out
 
@@ -83,7 +83,7 @@ That is about 1376 seconds, 9 seconds of which are data generation, to do ten it
 
 By comparison, in X-Stream's Figure 18, at `1 << 29` edges `gcc`'s sort doesn't finish in 500 seconds (and it looks like it is heading for 1000 seconds), and counting sort clocks in at a little over 250 seconds.
 
-It isn't clear what has changed since 2013 (and perhaps I misunderstood the scale of graph they are working with), but if you multiply this by three (to get to 1.5B edges, per the graph in question), you get almost 400 seconds, plus some slop to account for a few years passing... Maybe 600 seconds is the right ballpark?
+It isn't clear what has changed since 2013 (and perhaps I misunderstood the scale of graph they are working with), but if you multiply this by three (to get to 1.5B edges, per the graph in question), you do get almost 400 seconds, plus some slop to account for a few years passing... Maybe 600 seconds is the right ballpark?
 
 Although, Rust's `sort` is quite primitive. Isn't there anything better?
 
@@ -190,13 +190,13 @@ Oh wow. Is that 7.5 seconds to sort `1 << 29` edges?
 
 Well, that sure is faster than the 250 seconds counting sort took in the X-Stream paper. [Thanks Wikipedia!](https://wikimediafoundation.org/wiki/Ways_to_Give)
 
-Also, this time is for [my 100 line radix sort implementation](https://github.com/frankmcsherry/radix-sort/blob/master/src/lib.rs#L161-L224); there are better implementations out there, people writing [new papers](http://www.vldb.org/pvldb/vol8/p1518-cho.pdf) each year, and one should only expect things to get better. I'm planning on stealing as much as I can.
+Also, this time is for [my 100 line radix sort implementation](https://github.com/frankmcsherry/radix-sort/blob/master/src/lib.rs#L161-L224); there are better implementations out there, people writing [new papers](http://www.vldb.org/pvldb/vol8/p1518-cho.pdf) each year, and one should only expect things to get better. Personally, I'm planning on stealing as much as I can.
 
 ### Science incoming!
 
 Let's re-test a simple instance of the main thesis of the X-Stream paper with an experiment.
 
-**Note**: X-Stream is a weird and complicated system, and this simple experiment isn't going to tell us about X-Stream, so much as whether and when you should sort edges before you process them.
+**Note**: X-Stream is a weird and complicated system, and this simple experiment isn't going to tell us about X-Stream, so much as whether and when you should sort edges before you process them. There is also an important caveat just before the conclusions.
 
 The simplest graph computation I can think of is computing node degrees. "For each source, how many edges does it have to other nodes?" We could either scan unordered edges and accumulate counts in an array, or we could sort the edge data and then accumulate counts in an array.
 
