--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -79,11 +79,11 @@ Echidnatron% time cargo run
 cargo run 1034.41s user 204.27s system 90% cpu 22:56.07 total
 ```
 
-That is about 1376 seconds, 9 seconds of which are data generation, to do ten iterations, so 128.6 seconds per iteration.
+That is about 1376 seconds, 9 seconds of which are data generation, to do ten iterations, so 137.6 seconds per iteration.
 
 By comparison, in X-Stream's Figure 18, at `1 << 29` edges `gcc`'s sort doesn't finish in 500 seconds (and it looks like it is heading for 1000 seconds), and counting sort clocks in at a little over 250 seconds.
 
-It isn't clear what has changed since 2013 (and perhaps I misunderstood the scale of graph they are working with), but if you multiply this by three (to get to 1.5B edges, per the graph in question), you do get almost 400 seconds, plus some slop to account for a few years passing... Maybe 600 seconds is the right ballpark?
+It isn't clear what has changed since 2013 (and perhaps I misunderstood the scale of graph they are working with), but if you multiply this by three (to get to 1.5B edges, per the graph in question), you do get about 400 seconds, plus some slop to account for a few years passing... Maybe 600 seconds is the right ballpark?
 
 Although, Rust's `sort` is quite primitive. Isn't there anything better?
 
@@ -93,7 +93,7 @@ Although, Rust's `sort` is quite primitive. Isn't there anything better?
 
 Unfortunately, it isn't a very good sorting algorithm for large amounts of data, for exactly the reason that we are trying to sort the data in the first place: counting sort does lots of random accesses, and those random accesses get very expensive as the space of keys gets large.
 
-Counting sort first determines the a node's degree by scanning the elements, then it accumulates these degrees to determine offsets in a larger array, where the sorted data will land. It then scans the elements again and writes them to final array at the appropriate offset:
+Counting sort first determines each node's degree by scanning the elements and updating counts, then it accumulates these degrees to determine offsets in a larger array, where the sorted data will land. It then scans the elements again and writes them to final array at the appropriate offset:
 
 ```rust
 // determine node degrees
