--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -93,7 +93,7 @@ Although, Rust's `sort` is quite primitive. Isn't there anything better?
 
 Unfortunately, it isn't a very good sorting algorithm for large amounts of data, for exactly the reason that we are trying to sort the data in the first place: counting sort does lots of random accesses, and those random accesses get very expensive as the space of keys gets large.
 
-Counting sort first determines each node's degree by scanning the elements and updating counts, then it accumulates these degrees to determine offsets in a larger array, where the sorted data will land. It then scans the elements again and writes them to final array at the appropriate offset:
+Counting sort first determines each node's degree by scanning the elements and updating counts, then it accumulates these degrees to determine offsets in a larger array, where the sorted data will land. It then scans the elements again and writes them to the final array at the appropriate offset:
 
 ```rust
 // determine node degrees
@@ -143,7 +143,7 @@ Pretty easy, huh?
 
 You do four of these sequential scans, and in each you write sequentially to one of 256 locations. Four passes, no random access. This is great. I don't even see a `log n` there, do you?
 
-The great thing about radix sort is that in one scan through the data does the equivalent of 8 comparisons which would normally take a bunch of conditional logic. Instead, it just pulled out a byte and used it to look up an address.
+The great thing about radix sort is that in one scan through the data it does the equivalent of 8 comparisons which would normally take a bunch of conditional logic. Instead, it just pulled out a byte and used it to look up an address.
 
 The downside to radix sort is that is just looks at bytes. If you had some deep and semantically meaningful ordering defined over your type, (or, like, a pointer) that's great but we're sorting by its bytes. In the context of graph edges, this works just fine.
 
