--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -273,7 +273,7 @@ Next up is to try out the graph invoked at the beginning of the post, `twitter_r
 
 I did that, and found I could sort it in 50 seconds on one core (admittedly using a machine with more than 16GB of memory), improving on prior estimates of 600 seconds. When you add 15 seconds, [the time we got for single-threaded pagerank on adjacency-list data](https://github.com/frankmcsherry/blog/blob/master/posts/2015-01-15.md), you get 65 seconds, which (and this is totally a coincidence, seriously) ends up basically the same as the 64 seconds we started with.
 
-*Note*: The above raises an important point: the performance of radix sort depends on the throughput of the storage where you edges live, and the throughput of memory is quite high. If your data were on disk, the throupugh would be lower. However, it is the *throughput* of your storage that matters for sorting, not the latency (the X-Stream paper focuses on the latter, which I think is a bug). If your edge data is on disk you should compare the sequential throughput of your disk to the random throughput of your memory when trying to determine whether sorting is right for you.
+*Note*: The above raises an important point: the performance of radix sort depends on the throughput of the storage where you edges live, and the throughput of memory is quite high, if you can swing memory. If your data were on disk, the throughput would be lower. However, it is the *throughput* of your storage that matters for sorting, not the latency (the X-Stream paper focuses on the latter, which I think is a bug). If your edge data is on disk you should compare the sequential throughput of your disk to the random throughput of your memory when trying to determine whether sorting is right for you.
 
 ### Conclusions
 
