--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -45,7 +45,7 @@ Because it does all these allocations, I'm not really able to try it out with th
 We are going to sort `1 << 29` elements, which is a weird way to write things. When you see `1 << 29` you should think either "half a billion" , or "one third of that graph Frank asked about", or just "some big-ish number of edges".
 
 
-We are using `1 << 29` because that is what fits in my  laptop's memory, and coincidentally that is the largest number of elements the X-Stream paper sorted when evaluating the cost of sorting (their Figure 18). We will be able to compare out results with their results! SCIENCE!
+We are using `1 << 29` because that is what fits in my  laptop's memory, and coincidentally that is the largest number of elements the X-Stream paper sorted when evaluating the cost of sorting (their Figure 18). We will be able to compare our results with their results! SCIENCE!
 
 I'm going to sort random `(u32, u32)` data, then flip the data around and do it again, ten times in total:
 
@@ -273,7 +273,7 @@ Next up is to try out the graph invoked at the beginning of the post, `twitter_r
 
 I did that, and found I could sort it in 50 seconds on one core (admittedly using a machine with more than 16GB of memory), improving on prior estimates of 600 seconds. When you add 15 seconds, [the time we got for single-threaded pagerank on adjacency-list data](https://github.com/frankmcsherry/blog/blob/master/posts/2015-01-15.md), you get 65 seconds, which (and this is totally a coincidence, seriously) ends up basically the same as the 64 seconds we started with.
 
-*Note*: The above raises an important point: the performance of radix sort depends on the throughput of the storage where you edges live, and the throughput of memory is quite high, if you can swing memory. If your data were on disk, the throughput would be lower. However, it is the *throughput* of your storage that matters for sorting, not the latency (the X-Stream paper focuses on the latter, which I think is a bug). If your edge data is on disk you should compare the sequential throughput of your disk to the random throughput of your memory when trying to determine whether sorting is right for you.
+*Note*: The above raises an important point: the performance of radix sort depends on the throughput of the storage where your edges live, and the throughput of memory is quite high, if you can swing memory. If your data were on disk, the throughput would be lower. However, it is the *throughput* of your storage that matters for sorting, not the latency (the X-Stream paper focuses on the latter, which I think is a bug). If your edge data is on disk you should compare the sequential throughput of your disk to the random throughput of your memory when trying to determine whether sorting is right for you.
 
 ### Conclusions
 
