--- a/posts/2015-05-12.md
+++ b/posts/2015-05-12.md
@@ -57,7 +57,7 @@ The `join` operator is *bi-linear*, which means it has some nice mathematical pr
 
 So I lied. We are going to add some more simple operators such as `map`, `filter`, and `concat`. These operators do not involve any data movement or grouping, and can always be performed *in situ*. They are also *linear*, and consequently [do not need any special differential dataflow implementation](https://users.soe.ucsc.edu/~abadi/Papers/differential_revision-app.pdf).
 
-## Prelude: Bread-first search
+## Prelude: Breadth-first search
 
 Let's use what we have so far start to build up an example of breadth-first search.
 
